// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Application /> <Application /> matches snapshot 1`] = `
preact-render-spy (1 nodes)
-------
<li class="Application">
  <a
    href="test/url"
    title="Test application"
  >
    <div class="PlaceholderImage PlaceholderImage"></div>
    <img
      src="icon.png"
      alt="Test application"
      onLoad={[Function onLoad]}
     />
  </a>
</li>

`;

exports[`<Application /> <Application /> targets are allowed 1`] = `
preact-render-spy (1 nodes)
-------
<li class="Application">
  <a
    target="_blank"
    title="Test application"
  >
    <div class="PlaceholderImage PlaceholderImage"></div>
    <img
      alt="Test application"
      onLoad={[Function onLoad]}
     />
  </a>
</li>

`;
